--- a/src/patternfly/base/tokens/_tokens-default.scss
+++ b/src/patternfly/base/tokens/_tokens-default.scss
@@ -1,6 +1,7 @@
- // Do not edit directly
- // Generated on Tue, 05 Dec 2023 16:11:05 GMT
-
+// /**
+//  * Do not edit directly
+//  * Generated on Tue, 06 Feb 2024 18:33:23 GMT
+//  */
 
 :root {
   --pf-t--global--background--color--action--plain--default: rgba(255, 255, 255, 0.0000);
@@ -125,10 +126,10 @@
   --pf-t--global--border--radius--small: var(--pf-t--global--border--radius--200);
   --pf-t--global--border--radius--tiny: var(--pf-t--global--border--radius--100);
   --pf-t--global--border--radius--sharp: var(--pf-t--global--border--radius--0);
-  --pf-t--global--border--width--control--active: var(--pf-t--global--border--width--200);
+  --pf-t--global--border--width--control--clicked: var(--pf-t--global--border--width--200);
   --pf-t--global--border--width--control--hover: var(--pf-t--global--border--width--100);
   --pf-t--global--border--width--control--default: var(--pf-t--global--border--width--100);
-  --pf-t--global--border--width--button--active: var(--pf-t--global--border--width--200);
+  --pf-t--global--border--width--button--clicked: var(--pf-t--global--border--width--200);
   --pf-t--global--border--width--button--hover: var(--pf-t--global--border--width--200);
   --pf-t--global--border--width--button--default: var(--pf-t--global--border--width--100);
   --pf-t--global--border--width--box--status--read: var(--pf-t--global--border--width--100);
@@ -139,7 +140,7 @@
   --pf-t--global--border--width--extra-strong: var(--pf-t--global--border--width--300);
   --pf-t--global--border--width--strong: var(--pf-t--global--border--width--200);
   --pf-t--global--border--width--regular: var(--pf-t--global--border--width--100);
-  --pf-t--global--border--width--divider--active: var(--pf-t--global--border--width--100);
+  --pf-t--global--border--width--divider--clicked: var(--pf-t--global--border--width--100);
   --pf-t--global--border--width--divider--hover: var(--pf-t--global--border--width--100);
   --pf-t--global--border--width--divider--default: var(--pf-t--global--border--width--100);
   --pf-t--global--icon--color--300: var(--pf-t--color--white);
@@ -284,7 +285,6 @@
   --pf-t--global--border--color--clicked: var(--pf-t--global--color--brand--200);
   --pf-t--global--border--color--hover: var(--pf-t--global--color--brand--100);
   --pf-t--global--border--color--default: var(--pf-t--global--border--color--100);
-  --pf-t--global--border--color--disabled: var(--pf-t--global--background--color--disabled--default);
   --pf-t--global--border--color--status--warning--clicked: var(--pf-t--global--color--status--warning--300);
   --pf-t--global--border--color--status--warning--hover: var(--pf-t--global--color--status--warning--300);
   --pf-t--global--border--color--status--warning--default: var(--pf-t--global--color--status--warning--200);
@@ -296,6 +296,14 @@
   --pf-t--global--icon--color--status--warning--clicked: var(--pf-t--global--color--status--warning--300);
   --pf-t--global--icon--color--status--warning--hover: var(--pf-t--global--color--status--warning--300);
   --pf-t--global--icon--color--status--warning--default: var(--pf-t--global--color--status--warning--200);
+  --pf-t--global--icon--size--font--4xl: var(--pf-t--global--font--size--4xl);
+  --pf-t--global--icon--size--font--3xl: var(--pf-t--global--font--size--3xl);
+  --pf-t--global--icon--size--font--2xl: var(--pf-t--global--font--size--2xl);
+  --pf-t--global--icon--size--font--xl: var(--pf-t--global--font--size--xl);
+  --pf-t--global--icon--size--font--lg: var(--pf-t--global--font--size--lg);
+  --pf-t--global--icon--size--font--md: var(--pf-t--global--font--size--md);
+  --pf-t--global--icon--size--font--sm: var(--pf-t--global--font--size--sm);
+  --pf-t--global--icon--size--font--xs: var(--pf-t--global--font--size--xs);
   --pf-t--global--text--color--nonstatus--on-gray--clicked: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-gray--hover: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-gray--default: var(--pf-t--global--text--color--regular);
@@ -364,10 +372,12 @@
   --pf-t--global--color--status--unread--attention--hover: var(--pf-t--global--color--status--danger--hover);
   --pf-t--global--color--status--unread--attention--clicked: var(--pf-t--global--color--status--danger--clicked);
   --pf-t--global--color--status--unread--attention--default: var(--pf-t--global--color--status--danger--default);
-  --pf-t--global--color--status--unread--default--active: var(--pf-t--global--color--brand--clicked);
+  --pf-t--global--color--status--unread--default--clicked: var(--pf-t--global--color--brand--clicked);
   --pf-t--global--color--status--unread--default--hover: var(--pf-t--global--color--brand--hover);
   --pf-t--global--color--status--unread--default--default: var(--pf-t--global--color--brand--default);
   --pf-t--global--background--color--control--default: var(--pf-t--global--background--color--primary--default);
+  --pf-t--global--border--color--alt: var(--pf-t--global--background--color--primary--default);
+  --pf-t--global--border--color--disabled: var(--pf-t--global--background--color--disabled--default);
   --pf-t--global--border--color--status--custom--clicked: var(--pf-t--global--color--status--custom--clicked);
   --pf-t--global--border--color--status--custom--hover: var(--pf-t--global--color--status--custom--hover);
   --pf-t--global--border--color--status--custom--default: var(--pf-t--global--color--status--custom--default);
@@ -452,14 +462,14 @@
   --pf-t--global--icon--color--brand--clicked: var(--pf-t--global--color--brand--clicked);
   --pf-t--global--icon--color--brand--hover: var(--pf-t--global--color--brand--hover);
   --pf-t--global--icon--color--brand--default: var(--pf-t--global--color--brand--default);
-  --pf-t--global--icon--size--body--lg: var(--pf-t--global--font--size--body--lg);
-  --pf-t--global--icon--size--body--default: var(--pf-t--global--font--size--body--default);
-  --pf-t--global--icon--size--body--sm: var(--pf-t--global--font--size--body--sm);
-  --pf-t--global--icon--size--heading--h6: var(--pf-t--global--font--size--heading--h6);
-  --pf-t--global--icon--size--heading--h5: var(--pf-t--global--font--size--heading--h5);
-  --pf-t--global--icon--size--heading--h4: var(--pf-t--global--font--size--heading--h4);
-  --pf-t--global--icon--size--heading--h3: var(--pf-t--global--font--size--heading--h3);
-  --pf-t--global--icon--size--heading--h2: var(--pf-t--global--font--size--heading--h2);
-  --pf-t--global--icon--size--heading--h1: var(--pf-t--global--font--size--heading--h1);
+  --pf-t--global--icon--size--font--body--lg: var(--pf-t--global--font--size--body--lg);
+  --pf-t--global--icon--size--font--body--default: var(--pf-t--global--font--size--body--default);
+  --pf-t--global--icon--size--font--body--sm: var(--pf-t--global--font--size--body--sm);
+  --pf-t--global--icon--size--font--heading--h6: var(--pf-t--global--font--size--heading--h6);
+  --pf-t--global--icon--size--font--heading--h5: var(--pf-t--global--font--size--heading--h5);
+  --pf-t--global--icon--size--font--heading--h4: var(--pf-t--global--font--size--heading--h4);
+  --pf-t--global--icon--size--font--heading--h3: var(--pf-t--global--font--size--heading--h3);
+  --pf-t--global--icon--size--font--heading--h2: var(--pf-t--global--font--size--heading--h2);
+  --pf-t--global--icon--size--font--heading--h1: var(--pf-t--global--font--size--heading--h1);
   --pf-t--global--color--status--read--on-secondary: var(--pf-t--global--background--color--control--default);
 }
