feat(): update border-radius vars, move plain

--- a/src/patternfly/components/CodeEditor/code-editor.scss
+++ b/src/patternfly/components/CodeEditor/code-editor.scss
@@ -16,6 +16,7 @@
   --#{$code-editor}__header-content--PaddingBlockEnd: var(--pf-t--global--spacer--xs);
   --#{$code-editor}__header-content--PaddingInlineStart: var(--pf-t--global--spacer--sm);
   --#{$code-editor}__header-content--PaddingInlineEnd: var(--pf-t--global--spacer--sm);
+  --#{$code-editor}__header-content--BorderRadius: var(--pf-t--global--border--radius--medium);
 
   // upload
   --#{$code-editor}__upload--PaddingInlineStart: var(--pf-t--global--spacer--md);
@@ -27,6 +28,7 @@
   // main
   --#{$code-editor}__main--BorderColor: var(--pf-t--global--border--color--default);
   --#{$code-editor}__main--BorderWidth: var(--pf-t--global--border--width--box--default);
+  --#{$code-editor}__main--BorderRadius: var(--pf-t--global--border--radius--medium);
   --#{$code-editor}__main--BackgroundColor: var(--pf-t--global--background--color--primary--default);
   --#{$code-editor}--m-read-only__main--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
   --#{$code-editor}__upload--before--BorderWidth: 0;
@@ -85,6 +87,10 @@
     content: "";
     border-block-end: var(--#{$code-editor}__header--before--BorderBottomWidth) solid var(--#{$code-editor}__header--before--BorderBottomColor);
   }
+
+  &.pf-m-plain {
+    --#{$code-editor}__header-content--BackgroundColor: var(--#{$code-editor}__header-content--m-plain--BackgroundColor);
+  }
 }
 
 .#{$code-editor}__header-content {
@@ -96,11 +102,7 @@
   padding-inline-start: var(--#{$code-editor}__header-content--PaddingInlineStart);
   padding-inline-end: var(--#{$code-editor}__header-content--PaddingInlineEnd);
   background-color: var(--#{$code-editor}__header-content--BackgroundColor);
-  border-radius: var(--#{$code-editor}__tab--BorderRadius) 0 0 0;
-
-  &.pf-m-plain {
-    --#{$code-editor}__header-content--BackgroundColor: var( --#{$code-editor}__header-content--m-plain--BackgroundColor);
-  }
+  border-radius: var(--#{$code-editor}__header-content--BorderRadius) 0 0 0;
 }
 
 .#{$code-editor}__controls {
@@ -141,7 +143,7 @@
   background-color: var(--#{$code-editor}__main--BackgroundColor);
   border: var(--#{$code-editor}__main--BorderWidth) solid;
   border-color: var(--#{$code-editor}__main--BorderColor);
-  border-radius: 0 0 var(--#{$code-editor}__tab--BorderRadius) var(--#{$code-editor}__tab--BorderRadius);
+  border-radius: 0 0 var(--#{$code-editor}__main--BorderRadius) var(--#{$code-editor}__main--BorderRadius);
 
   &.pf-m-drag-hover {
     --#{$code-editor}__upload--before--BorderWidth: var(--#{$code-editor}__main--m-drag-hover--before--BorderWidth);
